--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "build": "tsc --build",
     "clean": "tsc --build --clean",
     "postbuild": "cp -r package.json config dist",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
     "test": "jest",
     "prepublishOnly": "npm pkg delete scripts"
   },
@@ -32,22 +30,22 @@
   },
   "homepage": "https://github.com/en9inerd/jekyll-post-bot#readme",
   "dependencies": {
-    "dotenv": "^16.4.1",
-    "isomorphic-git": "^1.25.3",
-    "telebuilder": "file:../telebuilder/dist",
-    "telegram": "^2.19.10"
+    "isomorphic-git": "^1.25.6",
+    "telebuilder": "^0.7.6",
+    "telegram": "^2.19.20"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.6",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
-    "husky": "^9.0.10",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
-    "semantic-release": "^23.0.0",
+    "semantic-release": "^23.0.2",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
