fix: use biome for linting

--- a/.dockerignore
+++ b/.dockerignore
@@ -10,8 +10,7 @@ botInfo
 .husky
 .github
 .commitlintrc.js
-.eslintrc.json
-.eslintignore
+biome.json
 .releaserc.json
 CHANGELOG.md
 init-mongo.sh
