--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node dist/entry.js",
     "start:watch": "nodemon src/entry.ts --watch src --watch ../telebuilder --ext ts,json --delay 1",
-    "lint": "eslint .",
+    "lint": "biome .",
     "build": "tsc --build",
     "clean": "tsc --build --clean",
     "postbuild": "cp -r package.json config dist",
@@ -31,17 +31,16 @@
   "homepage": "https://github.com/en9inerd/jekyll-post-bot#readme",
   "dependencies": {
     "isomorphic-git": "^1.25.7",
-    "telebuilder": "^0.7.10",
+    "telebuilder": "^0.7.11",
     "telegram": "^2.20.15"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.7.1",
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
     "dotenv": "^16.4.5",
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
